# gitme

./: .gitignore  LICENSE  README.md  pyproject.toml  release.sh  setup.py
src/gitme/: __init__.py  cli.py  config.py  git_diff.py  llm_client.py  storage.py
src/gitme.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_git_diff.py  test_llm_client.py  test_storage.py
