[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitme-cli"
version = "0.4.3"
description = "Git commit message generator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jing Wang", email = "jingwang.physics@gmail.com"},
]
dependencies = [
    "click>=8.0.0",
    "anthropic>=0.57.1",
]

[project.scripts]
gitme = "gitme.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"