[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitme-cli"
version = "0.4.8"
description = "Git commit message generator"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Jing Wang", email = "jingwang.physics@gmail.com"},
]
keywords = ["git", "commit", "message", "generator", "ai", "claude", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0.0",
    "anthropic>=0.57.1",
]

[project.urls]
Homepage = "https://github.com/wangjing0/gitme"
Repository = "https://github.com/wangjing0/gitme"
Issues = "https://github.com/wangjing0/gitme/issues"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]

[project.scripts]
gitme = "gitme.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"