[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitme-cli"
version = "0.5.3"
description = "Git commit message generator"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Jing Wang", email = "jingwang.physics@gmail.com"},
]
keywords = ["git", "commit", "message", "generator", "ai", "claude", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git"
]
dependencies = [
    "click>=8.0.0",
    "anthropic>=0.57.1",
]

[project.urls]
Homepage = "https://github.com/wangjing0/gitme"
Repository = "https://github.com/wangjing0/gitme"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]

[project.scripts]
gitme = "gitme.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gitme"]